--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,20 @@
 {
-    "manifest_version": 3,
-    "name": "PrecioDolar - Cotización dólar blue Argentina",
-    "description": "Extensión Argentina que muestra la cotización y una calculadora al día del dólar oficial y blue.",
-    "version": "1.2.3",
-    "icons": {
-      "128": "logo128.png",
-      "48": "logo48.png",
-      "16": "logo16.png"
+  "manifest_version": 3,
+  "name": "PrecioDolar - Cotización dólar Argentina",
+  "description": "Extensión Argentina que muestra la cotización del dólar oficial, blue, MEP, CCL y más. Incluye calculadora, gráficos históricos y alertas de precio.",
+  "version": "2.0.0",
+  "icons": {
+    "16": "logo16.png",
+    "48": "logo48.png",
+    "128": "logo128.png"
   },
-    "action": { "default_popup": "index.html" }
-  }
+  "action": {
+    "default_popup": "index.html",
+    "default_title": "PrecioDolar - Ver cotizaciones"
+  },
+  "permissions": ["storage", "notifications"],
+  "host_permissions": [
+    "https://dolarapi.com/*",
+    "https://api.argentinadatos.com/*"
+  ]
+}
